code updated with comments

--- a/HTML_JS_LOCALSTORAGE_CRUD/pages/index.html
+++ b/HTML_JS_LOCALSTORAGE_CRUD/pages/index.html
@@ -141,7 +141,7 @@
     <!-- main Section  -->
     <main>
       <div class="main-h1">Welcome to the Home Page</div>
-      <p class="main-p">Click On menu To Show Magic</p>
+      <p class="main-p">Click On Top Nav link Employee,Department and Check all the functionality</p>
     </main>
 
     <footer>
